--- a/styles/styles.css
+++ b/styles/styles.css
@@ -164,7 +164,7 @@ span {
   border-radius: 14px;
   background: #232426;
   box-shadow: inset 22px -22px 44px #1d1e20, inset -22px 22px 44px #292a2c;
-  width: 750px;
+  width: 50vw;
 }
 
 .ticket-reminder {
@@ -218,4 +218,124 @@ span {
   width: 100%;
   height: 2.5rem; /* Footer height */
   display: inline-block;
+}
+
+.Q-above-mobile {
+  display: none;
+}
+
+.mobile-comments {
+  display: none;
+}
+
+@media only screen and (max-width: 750px) {
+  body {
+    max-height: 100vh;
+  }
+
+  .content p {
+    width: 60%;
+    font-size: 12px;
+  }
+
+  .header-container img {
+    height: 100px;
+  }
+
+  .Q-above {
+    display: none;
+  }
+
+  .Q-above-mobile {
+    display: flex;
+    font-size: 12px;
+    text-align: center;
+  }
+
+  .border-comments {
+    width: 130px;
+  }
+
+  .csat-container {
+    flex-direction: column;
+  }
+
+  .softbox {
+    margin-bottom: 13px;
+    width: 90px;
+    height: 90px;
+  }
+
+  .softbox-10 img {
+    width: 60px;
+    height: 60px;
+  }
+  .softbox-5 img {
+    width: 60px;
+    height: 60px;
+  }
+  .softbox-3 img {
+    width: 60px;
+    height: 60px;
+  }
+
+  .comments-container {
+    padding: 0;
+  }
+
+  .border-comments {
+    display: none;
+  }
+
+  .mobile-comments {
+    margin: 0;
+    border-radius: 14px;
+    border-radius: 14px;
+    background: #232426;
+    box-shadow: inset 22px -22px 44px #1d1e20, inset -22px 22px 44px #292a2c;
+    width: 80vw;
+    position: relative;
+    overflow: visible;
+    display: block;
+  }
+
+  .m-comment-txt {
+    background-color: rgb(239, 99, 81);
+    top: -20px;
+    left: -20px;
+    padding: 2px 5px;
+    border-radius: 1.2em;
+    position: relative;
+    width: 80%;
+    font-size: 12px;
+    color: rgb(35, 36, 38);
+  }
+
+  .m-comments-info {
+    color: rgba(255, 250, 243, 0.7);
+    padding: 0 12px 12px 12px;
+    font-size: 12px;
+  }
+}
+
+@media only screen and (min-device-width: 764px) and (max-device-width: 1024px) {
+  body {
+    background-size: cover;
+  }
+  .ticket-reminder::after {
+    height: 55.5px;
+  }
+
+  .Q-above {
+    text-align: center;
+  }
+
+  .content {
+    margin: 0 auto;
+  }
+
+  .csat-container {
+    margin: 0 auto;
+    width: 100%;
+  }
 }
